# claude-backend

./: .env.example  app.py  pyproject.toml  render.yaml  requirements.txt  sse.py
agent/: graph.py  llm.py  message_builder.py
agent/subagents/: loader.py  registry.py
files/: cache.py  csv_xlsx.py  parse.py  pdf_image.py
skills/: SOURCE.md
tests/: conftest.py  test_app_health.py  test_cache.py  test_chat_endpoint.py  test_csv_xlsx.py  test_files_endpoint.py  test_graph.py  test_llm.py  test_message_builder.py  test_parse.py  test_pdf_image.py  test_sse.py  test_subagent_loader.py  test_subagent_registry.py
tests/fixtures/: sample.csv  sample.xlsx
