[project]
name = "finance-chatbot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=22.0.0",
    "langgraph>=0.2.0",
    "deepagents>=0.0.5",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "cachetools>=5.3.0",
    "tenacity>=8.2.0",
    "python-magic>=0.4.27",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
